# Skill-Quality-Assurance-Framework-SQAF

./: .gitignore  GOVERNACE_CONTRIBUTING.md  LICENSE  README.md  orchestrator.md  pyproject.toml
.github/workflows/: ci.yml
assets/: assessment-summarizer-validation-schema.json  general-reviewer-validator.json  skill-quality-report-template.md  skill-quality-report.json
data-test-poc/: README.md
data-test-poc/containerized-environment-setup/: SKILL.md
data-test-poc/data-pipeline-etl/: SKILL.md
docs/: calculator_implementation_plan.md  cli_user_guide.md  development_guideline.md  problem_origing.md  test_component_description.md
skills/assessment-summarizer/: SKILL.md
skills/assessment-summarizer/assets/: skill-quality-report-template.md
skills/assessment-summarizer/script/: __init__.py
skills/assessment-summarizer/scripts/: __init__.py  calculator.py
sqaf/: __init__.py  __main__.py  cli.py  orchestrator.py  runner.py  session.py  session_builder.py  skills_discovery.py
sqaf/ui/: __init__.py  banner.py  plain_renderer.py  renderer.py  rich_renderer.py
sub-agents/eval-reviewer/: eval-reviewer.md
sub-agents/eval-reviewer/assets/: benchmark-schema.json  eval-assessment-schema.json  eval-definitions-schema.json  (+2 more)
sub-agents/instruction-reviewer/: instruction-reviewer.md
sub-agents/intent-reviewer/: intent-reviewer.md
sub-agents/qa-reviewer/: qa-reviewer.md
tests/: __init__.py  test_banner.py  test_calculator.py  test_cli.py  test_orchestrator.py  test_renderer.py  test_runner.py  test_session.py  test_session_builder.py  test_skills_discovery.py
(+7 files in other folders)
