[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqaf"
version = "1.0.0"
description = "Skill Quality Assessment Framework — CLI runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
interactive = [
    "pyfiglet>=0.8",
]

[project.scripts]
sqaf = "sqaf.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sqaf*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
